--- a/app/src/main/res/layout/fr_onboarding_step.xml
+++ b/app/src/main/res/layout/fr_onboarding_step.xml
@@ -16,8 +16,10 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fadeScrollbars="false"
         android:fillViewport="true"
-        android:scrollbars="none"
+        android:scrollbarThumbVertical="@drawable/scrollview_thumb"
+        android:scrollbars="vertical"
         tools:background="@color/colorPrimaryDark">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,7 +48,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/top_iv"
-                app:layout_constraintVertical_bias="0.1"
+                app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintVertical_chainStyle="spread_inside">
 
                 <com.google.android.material.textview.MaterialTextView
@@ -59,7 +61,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.1"
                     app:textRes="@{viewModel.model.title}"
                     tools:text="@string/onboarding_title_3" />
 
