--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class=".InformativeBinding">
 
@@ -42,86 +41,53 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/btn_back" />
 
-        <ImageView
-            android:id="@+id/iv_check_one"
+        <include
+            android:id="@+id/layout_message_one"
+            layout="@layout/check_image_with_text_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_28dp"
-            android:layout_marginEnd="@dimen/dimen_16dp"
-            android:contentDescription="@null"
-            android:paddingTop="@dimen/dimen_4dp"
-            app:layout_constraintEnd_toStartOf="@id/tv_first_sign_up_screen_message_one"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_first_sign_up_screen_message_one"
-            app:srcCompat="@drawable/ic_check" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_first_sign_up_screen_message_one"
-            style="@style/TextView_400"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dimen_32dp"
             android:layout_marginBottom="@dimen/dimen_20dp"
-            android:lineSpacingExtra="@dimen/dimen_4dp"
-            android:text="@string/first_sign_up_screen_message_one"
-            android:textAlignment="viewStart"
-            android:textSize="@dimen/size_16sp"
-            app:layout_constraintBottom_toTopOf="@id/tv_first_sign_up_screen_message_two"
+            app:isVisible="@{true}"
+            app:layout_constraintBottom_toTopOf="@id/layout_message_two"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_check_one" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:message="@{@string/first_sign_up_screen_message_one}" />
 
-        <ImageView
-            android:id="@+id/iv_check_two"
+        <include
+            android:id="@+id/layout_message_two"
+            layout="@layout/check_image_with_text_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_28dp"
-            android:layout_marginEnd="@dimen/dimen_16dp"
-            android:contentDescription="@null"
-            android:paddingTop="@dimen/dimen_4dp"
-            app:layout_constraintEnd_toStartOf="@id/tv_first_sign_up_screen_message_two"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_first_sign_up_screen_message_two"
-            app:srcCompat="@drawable/ic_check" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_first_sign_up_screen_message_two"
-            style="@style/TextView_400"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dimen_32dp"
             android:layout_marginBottom="@dimen/dimen_28dp"
-            android:lineSpacingExtra="@dimen/dimen_4dp"
-            android:maxLines="2"
-            android:text="@string/first_sign_up_screen_message_two"
-            android:textAlignment="viewStart"
-            android:textSize="@dimen/size_16sp"
+            app:isVisible="@{true}"
             app:layout_constraintBottom_toTopOf="@id/divider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_check_two" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:message="@{@string/first_sign_up_screen_message_two}" />
 
-        <com.google.android.material.textview.MaterialTextView
-            style="@style/TextView_400"
+        <include
+            android:id="@+id/layout_message_three"
+            layout="@layout/check_image_with_text_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_28dp"
-            android:lineSpacingExtra="@dimen/dimen_4dp"
-            android:text="@string/first_sign_up_screen_message_three"
-            android:textAlignment="viewStart"
+            app:isVisible="@{false}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/tv_first_sign_up_screen_message_two"
-            app:layout_constraintTop_toBottomOf="@id/divider" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:message="@{@string/first_sign_up_screen_message_three}" />
 
         <View
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="@dimen/dimen_32dp"
             android:background="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/tv_first_sign_up_screen_message_two"
-            app:layout_constraintStart_toStartOf="@id/tv_first_sign_up_screen_message_two"
+            app:layout_constraintEnd_toEndOf="@id/layout_message_two"
+            app:layout_constraintStart_toStartOf="@id/layout_message_two"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
